wk_taa_taaqa/src/objects/CBI_Form__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Goals__c</fullName>
        <label>Appointment Goals:</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Attendees__c</fullName>
        <inlineHelpText>Enter names/roles of presentation attendees.</inlineHelpText>
        <label>Attendees and Roles</label>
        <length>2500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Audit_Fines__c</fullName>
        <label>Audit/Fines</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Competitor_use_proposed_solution__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does that CPA competitor use the solution(s) we are proposing?</inlineHelpText>
        <label>Competitor using proposed solution?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consolidations_of_fixed_assets_needed__c</fullName>
        <inlineHelpText>Do you need to consolidated fixed assets between companies?</inlineHelpText>
        <label>Consolidations of fixed assets needed?</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Current_Client_Challenges__c</fullName>
        <inlineHelpText>What are the top priorities or initiatives the firm or company has in place? What business problem are they trying to solve? Is their approach solid and what insight and recommendations should you provide to make it better?</inlineHelpText>
        <label>Current Client Challenges</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Current_GL_package_TB_format__c</fullName>
        <inlineHelpText>What GL package are you using? What format are your tb&apos;s in</inlineHelpText>
        <label>Current GL package? TB format?</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Current_TB_process_managing__c</fullName>
        <inlineHelpText>How are your currently managing your TB process</inlineHelpText>
        <label>Current TB process managing?</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Current_document_management__c</fullName>
        <inlineHelpText>How are you handling your document management currently?</inlineHelpText>
        <label>Current document management?</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Current_process_for_sign_off_and_review__c</fullName>
        <inlineHelpText>What is your current your process for sign off and review?</inlineHelpText>
        <label>Current process for sign off and review?</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Customer_Meeting_Closing__c</fullName>
        <inlineHelpText>•	Recap Visual Roadmap (Circle Slide)
•	Revisit Opening Message/Story
•	Summarize the value tied to CBIs
•	Action Plan and Next Steps</inlineHelpText>
        <label>Customer Meeting Closing</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Customer_Meeting_Opening__c</fullName>
        <inlineHelpText>•	Introductions - Customer and SA/WK 
•	Confirm current state and CBIs
•	Additional Discovery</inlineHelpText>
        <label>Customer Meeting Opening</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Customers_Stage_in_the_Buyers_Process__c</fullName>
        <inlineHelpText>What stage is the customer in the Buyer’s Process?</inlineHelpText>
        <label>Customer&apos;s Stage in the Buyer&apos;s Process</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Awareness that a problem exists</fullName>
                </value>
                <value>
                    <fullName>Understand impact the problem has on their business</fullName>
                </value>
                <value>
                    <fullName>Identify and scope options to solve problem</fullName>
                </value>
                <value>
                    <fullName>Determine decision making process and criteria and narrow options</fullName>
                </value>
                <value>
                    <fullName>Make a decision and negotiate</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DSM_Blueprint_Rating__c</fullName>
        <inlineHelpText>DSM will rate blueprint on a scale of 1-5 with 1 being the Lowest and 5 being the Highest</inlineHelpText>
        <label>DSM Blueprint Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1_Lowest</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5_Highest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DSM_Director_Blueprint_Review_Notes__c</fullName>
        <inlineHelpText>DSM/Director will review Blueprint and add notes to help advance opportunity, highlight additional areas for discovery and help RSC develop craft</inlineHelpText>
        <label>DSM/Director Blueprint Review Notes</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Demo2Win_Considerations__c</fullName>
        <inlineHelpText>Meeting opening
-Introductions
-Recap current state
-Visual road map 

Tell-Show-Tell:Connect A to B
-Show software
-Less is more
-Show solution as easy and relevant
-Deliver value statement

Meeting Closing
-Recap visual road map
-Next steps</inlineHelpText>
        <label>Demo2Win! Framework</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Department_implementing_WPM__c</fullName>
        <inlineHelpText>Are you implementing WPM in a tax or account department (or other)?</inlineHelpText>
        <label>Department implementing WPM</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Do_XBRL_reporting_How__c</fullName>
        <inlineHelpText>Do you currently do XBRL reporting, and if so, what do you use? ???</inlineHelpText>
        <label>Do XBRL reporting? How?</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Do_you_use_Outloook_for_your_email__c</fullName>
        <inlineHelpText>Do you use Outloook for your email</inlineHelpText>
        <label>Do you use Outlook for your email?</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Efile_returns_or_send_offsite_for_review__c</fullName>
        <inlineHelpText>Will you E-File your returns? Or will you be sending them to your outside CPA firm to review/sign-off/file them?</inlineHelpText>
        <label>Efile returns or send offsite for review</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Experience_Pfx_Engagement_E_Paper__c</fullName>
        <inlineHelpText>Does anyone in the organization have experience with &quot;Pfx Engagement” or “E-Pace&quot; (if so, list name)?</inlineHelpText>
        <label>Experience &quot;Pfx Engagement”/“E-Paper&quot;</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Expertise__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>- Attracting, Developing &amp; Retaining Talent
- Succession Planning
- What’s next for your business? Grow, Do more with less, Merge/Split</inlineHelpText>
        <label>Expertise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Firm_Organization_Objectives__c</fullName>
        <inlineHelpText>What are their strategic goals? What plans do  they have in place to reach those goals?</inlineHelpText>
        <label>Firm/Organization Objectives</label>
        <length>4000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Hot_Buttons_Critical_Pain_Points__c</fullName>
        <inlineHelpText>What are the business challenges faced in day-to-day functions that have significant impact on how a company or firm performs?  Exp: streamlining internal processes, improving efficiency, attracting &amp; keeping top talent, data accuracy &amp; security, growth.</inlineHelpText>
        <label>Critical Business Issues:</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>How_are_we_countering__c</fullName>
        <label>How are we countering?</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>How_do_we_match_our_selling_process_to_i__c</fullName>
        <label>How we match our selling process to it:</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>How_many_users_of_the_system__c</fullName>
        <inlineHelpText>How many users of the system</inlineHelpText>
        <label>How many users of the system?</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>How_they_trial_balance_amounts_in_return__c</fullName>
        <inlineHelpText>Are the interested in GL Direct?)  or…Would you like to import your trial balance data or manually key tax amounts into our worksheets?</inlineHelpText>
        <label>How they trial balance amounts in return</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>How_tracking_FA_is_being_done__c</fullName>
        <inlineHelpText>How are you currently tracking FA</inlineHelpText>
        <label>How tracking FA is being done?</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Impacts_of_those_Challenges__c</fullName>
        <inlineHelpText>What will happen if the problems go unsolved? What is the impact to the business or the long term ramifications?</inlineHelpText>
        <label>Impacts of those Challenges</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Increased_Risk_of_Data_Breach__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>e.g. Increased risk of data breach</inlineHelpText>
        <label>Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Partner_included_in_the_demo__c</fullName>
        <label>Is Partner included in the demo?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Process_Workflow__c</fullName>
        <inlineHelpText>What are the key areas and workflows? Identify the gaps and the desired state.</inlineHelpText>
        <label>Key Process/Workflow</label>
        <length>4000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Last_Contact_Date_2__c</fullName>
        <formula>Opportunity__r.Primary_Contact_for_Proposal__r.LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows Last Activity Date for Primary Contact on the Associated Opportunity. 

If the date is in the future, it represents a scheduled meeting that will be taking place.</inlineHelpText>
        <label>Last Contact Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Contact_Date__c</fullName>
        <label>Last Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Onsite</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lower_Profit_Margins__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>e.g. Lower Profit Margins</inlineHelpText>
        <label>Growth</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lower_Realization_Rates__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>e.g. Lower realization rates</inlineHelpText>
        <label>Talent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maintain_historical_document_versions__c</fullName>
        <inlineHelpText>Do you have concerns of maintaining historical versions of documents?</inlineHelpText>
        <label>Maintain historical document versions?</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Manager_Email_2__c</fullName>
        <formula>Opportunity__r.Owner.Manager.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Provides the Sales Rep Manager&apos;s email</inlineHelpText>
        <label>Manager Email 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Email__c</fullName>
        <label>Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Membership_Groups_Different__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Are state consolidated membership groups different than the federal membership group?</inlineHelpText>
        <label>Membership Groups Different?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Moving_to_Paperless_system__c</fullName>
        <inlineHelpText>Why are you moving paperless system? (do you have a document management system) / What are you doing with your files</inlineHelpText>
        <label>Moving to Paperless system?</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>My_Team__c</fullName>
        <formula>($User.FirstName + &quot; &quot; + $User.LastName ) = Solution_Architect_Manager__c || 
($User.FirstName + &quot; &quot; + $User.LastName ) = Solution_Architect_Upper_Management__c</formula>
        <label>My Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Assets_add_during_the_year__c</fullName>
        <inlineHelpText>How many Assets do you add during the year</inlineHelpText>
        <label>Number of Assets add during the year?</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Number_of_assets_added_during_the_year__c</fullName>
        <inlineHelpText>How many assets do you add during the year, would you like to import additions/retirements/transfers?</inlineHelpText>
        <label>Number of assets added during the year?</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Number_of_fixed_assets_for_each_company__c</fullName>
        <inlineHelpText>How many fixed assets do you maintain for each company?</inlineHelpText>
        <label>Number of fixed assets for each company?</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>CBI_Forms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Other_needs_for_fixed_asset_tracking__c</fullName>
        <inlineHelpText>Do you have any other special needs for fixed asset tracking?</inlineHelpText>
        <label>Other needs for fixed asset tracking?</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Outside_auditor_CPA_use_ProSystem_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does your outside auditor/CPA firm currently use ProSystem fx Tax?</inlineHelpText>
        <label>Outside auditor/CPA use ProSystem Tax?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pain_points_complexities_to_discuss__c</fullName>
        <inlineHelpText>Any specific &quot;pain points&quot;/complexities in your compliance process that you would like to mention/discuss?</inlineHelpText>
        <label>Pain points/complexities to discuss?</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Perform_consolidations_Which_ones__c</fullName>
        <inlineHelpText>Do you perform any consolidations?  If so, describe membership group(s)?</inlineHelpText>
        <label>Perform consolidations? Which ones?</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Perform_interim_reporting_Frequency__c</fullName>
        <inlineHelpText>Do you do interim reporting and if yes, on what frequency?</inlineHelpText>
        <label>Perform interim reporting? Frequency?</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Post_Call_Completed_Date__c</fullName>
        <inlineHelpText>Date that the post-call occurred. Solution Architect should complete after the post call happens. Ideally the same day as the presentation.</inlineHelpText>
        <label>Post-Call Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Post_Call_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Complete same day as presentation if possible.</inlineHelpText>
        <label>Post Call Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Potential_Objections__c</fullName>
        <inlineHelpText>Brainstorm potential objections like timing and implementation, pricing request, change management, potential competitors and how we will respond.</inlineHelpText>
        <label>Potential Objections</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Pre_Call_Completed_Date__c</fullName>
        <inlineHelpText>Date that the pre-call occurred. Solution Architect should populate once the pre-call is completed. Cannot future date.</inlineHelpText>
        <label>Pre-Call Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_Call_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Complete at least 24 hours prior to presentation.</inlineHelpText>
        <label>Pre-Call Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prepare_foreign_forms_Which_ones__c</fullName>
        <inlineHelpText>Do you prepare foreign forms?  (If so, which ones if not listed above.)</inlineHelpText>
        <label>Prepare foreign forms? Which ones?</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Presentation_Date__c</fullName>
        <label>Presentation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Presentation_Focus__c</fullName>
        <inlineHelpText>Get a signed contract, beat out the competition, advance to meet with the decision maker, move to defined next steps - provide information for competitive analysis and/or prepare proposal and pricing</inlineHelpText>
        <label>Presentation Focus</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Presentation_Type__c</fullName>
        <label>Presentation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Presentation - SA Required</fullName>
                </value>
                <value>
                    <fullName>Presentation - SA Not Required</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Presenting_Bundle__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Are we presenting a bundle?</inlineHelpText>
        <label>Presenting Bundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Role__c</fullName>
        <label>Primary Contact Role</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+ Opportunity__r.Primary_Contact_for_Proposal__r.Id ,  Opportunity__r.Primary_Contact_for_Proposal__r.FirstName + &quot; &quot; + Opportunity__r.Primary_Contact_for_Proposal__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProSystem_Tax_experience_If_so_who__c</fullName>
        <inlineHelpText>Does anyone on your team have experience using ProSystem Tax?  If so, list those names here.</inlineHelpText>
        <label>ProSystem Tax experience? If so who?</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <formula>Text( Opportunity__r.Product_Category__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Productivity__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>- People, process &amp; workflow efficiency: do more with less, more with same, or more with more
- Profitability:  grow your business or increase your margins</inlineHelpText>
        <label>Productivity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Products_Currently_Used__c</fullName>
        <inlineHelpText>What product do you use now?</inlineHelpText>
        <label>Products Currently Used</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Products_to_Present__c</fullName>
        <label>Products Shown</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accounting Research Manager</fullName>
                </value>
                <value>
                    <fullName>ActiveData</fullName>
                </value>
                <value>
                    <fullName>AnswerConntect</fullName>
                </value>
                <value>
                    <fullName>ATX</fullName>
                </value>
                <value>
                    <fullName>Audit Accelerator</fullName>
                </value>
                <value>
                    <fullName>AutoFlow</fullName>
                </value>
                <value>
                    <fullName>Axcess Document</fullName>
                </value>
                <value>
                    <fullName>Axcess Portal</fullName>
                </value>
                <value>
                    <fullName>Axcess Practice</fullName>
                </value>
                <value>
                    <fullName>Axcess Tax</fullName>
                </value>
                <value>
                    <fullName>Axcess Workstream</fullName>
                </value>
                <value>
                    <fullName>Client Accounting Suite</fullName>
                </value>
                <value>
                    <fullName>Compliance Dashboard</fullName>
                </value>
                <value>
                    <fullName>Document On-Premise</fullName>
                </value>
                <value>
                    <fullName>Engagement</fullName>
                </value>
                <value>
                    <fullName>eTax Audit Room</fullName>
                </value>
                <value>
                    <fullName>eTax Calendar</fullName>
                </value>
                <value>
                    <fullName>eTax Portal</fullName>
                </value>
                <value>
                    <fullName>Fixed Asset Manager</fullName>
                </value>
                <value>
                    <fullName>Fixed Assets</fullName>
                </value>
                <value>
                    <fullName>Fixed Assets (CorpSystem)</fullName>
                </value>
                <value>
                    <fullName>Global fx</fullName>
                </value>
                <value>
                    <fullName>Global Integrator</fullName>
                </value>
                <value>
                    <fullName>IC - Client Relate</fullName>
                </value>
                <value>
                    <fullName>IC - Estate Planning</fullName>
                </value>
                <value>
                    <fullName>IC - Fast Answers</fullName>
                </value>
                <value>
                    <fullName>IC - International</fullName>
                </value>
                <value>
                    <fullName>IC - RADAR</fullName>
                </value>
                <value>
                    <fullName>IC - Smart Charts</fullName>
                </value>
                <value>
                    <fullName>IC - Tax Prep Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposed_Demo_Flow__c</fullName>
        <inlineHelpText>How do you recommend the SA facilitate the demo? What order should products be shown, what are key areas to highlight?</inlineHelpText>
        <label>Proposed Demo Flow</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Provide_sample_financial_or_other_report__c</fullName>
        <inlineHelpText>Could you provide us with sample financial or other reports you’d like to use WPM to help you produce?</inlineHelpText>
        <label>Provide sample financial or other report</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Report_on_a_consolidated_basis__c</fullName>
        <inlineHelpText>Do you report on a consolidated basis?</inlineHelpText>
        <label>Report on a consolidated basis?</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Reports_on_calendar_month_quarter_year__c</fullName>
        <inlineHelpText>Do you report on a calendar month, quarter, and/or year?  If not, describe your annual and interim periods.  (Please note: If customer has more than 12 periods or a 52/53 week year, Pfx Fixed Assets is not an option).</inlineHelpText>
        <label>Reports on calendar month, quarter, year</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Response_to_Objections__c</fullName>
        <inlineHelpText>Use the APQC Ask-Position-Question-Confirm technique to assure you field the objection properly. Go to Libraries to find job aids and battle cards.</inlineHelpText>
        <label>Response to Objections</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>- Data security and integrity  
- In the PRO market: accuracy and security in client deliverable and advice
- In the CORP market:  avoid incorrect filings, audits, fines, research and compliance</inlineHelpText>
        <label>Managing Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SA_Email_Warning__c</fullName>
        <formula>IF( NOT(ISPICKVAL(Status__c,&quot;Submitted&quot;)),&quot;You must set status to Submitted for the SA to receive the notification email&quot;+IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;, 12, 12) , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SA_Manager_Email__c</fullName>
        <label>SA Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SA_Note_s__c</fullName>
        <label>SA Note&apos;s</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <formula>Opportunity__r.Owner.FirstName &amp; &quot; &quot; &amp; Opportunity__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_capability_importance__c</fullName>
        <inlineHelpText>Search capability importance?</inlineHelpText>
        <label>Search capability importance?</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Seller_s_Strategy_on_the_Buyer_s_Stage__c</fullName>
        <inlineHelpText>What interventions will you use to address the phase they are in?</inlineHelpText>
        <label>Seller’s Strategy on the Buyer’s Stage</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Solution_Architect_Manager__c</fullName>
        <formula>Solution_Architect__r.Manager_Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Solution Architect Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Architect_Upper_Management__c</fullName>
        <formula>Solution_Architect__r.Manager.Manager_Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Solution Architect Upper Management</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Architect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field must be populated in order for the Solution Architect to be notified that the Solution Blueprint is available.</inlineHelpText>
        <label>Solution Architect</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CBI_Forms_SA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Solution_Blue_Print_Age__c</fullName>
        <formula>IF( ISNULL(Presentation_Date__c), NULL,
    IF(Opportunity__r.IsClosed = TRUE,
          Opportunity__r.CloseDate  - DATEVALUE( Presentation_Date__c ),
          TODAY()- DATEVALUE(Presentation_Date__c )
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Solution Blue Print Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solution_Presentation_Opening__c</fullName>
        <inlineHelpText>•	Engaging Opening using Story or Theme
•	Describe the Visual Road Map tied to customer goals</inlineHelpText>
        <label>Solution Presentation Opening</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Solutions_needed_for_existing_problems__c</fullName>
        <inlineHelpText>Is there something your current system doesn’t do or doesn’t do well that you are hoping our solution will provide?</inlineHelpText>
        <label>Solutions needed for existing problems?</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>States_Currently_Filing_In__c</fullName>
        <inlineHelpText>Which Sates do they file in?</inlineHelpText>
        <label>States Currently Filing In</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>This field must be changed to Submitted when you are ready to submit to the Solution Architect and your manager for their review.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategy_for_defeating_the_competition__c</fullName>
        <label>Strategy for defeating the competition?</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Tax_Competitor_End_Date__c</fullName>
        <formula>Opportunity__r.Account.Tax_Competitor_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Competitor End Date</label>
        <type>Date</type>
    </fields>
</CustomObject>